# arcgis-mcp

./: README.md  download_arcgis_samples.py  requirements-sample-downloader.txt
arcgis-mcp-server/: .env  .env.example  README.md  pyproject.toml
arcgis-mcp-server/arcgis_mcp_server/: __init__.py  config.py  map_utils.py  server.py  state_store.py
arcgis-mcp-server/arcgis_mcp_server/app/: arcgis-examples-app.html  arcgis-map-app.html  arcgis-studio-app.html
arcgis-mcp-server/arcgis_mcp_server/tools/: __init__.py  layer_intelligence.py  symbology_intelligence.py
arcgis-mcp-server/tests/: __init__.py  test_coordinate_normalization.py  test_layer_intelligence.py  test_map_route.py  test_run_intent_helpers.py  test_symbology_intelligence.py
mcp-apps/examples/: ai-assistant.html  analysis-area-measurement.html  analysis-elevation-profile.html  analysis-objects.html  analysis-shadow-cast.html  analysis-viewshed.html  analysis-volume-measurement.html  arcade-execute-chart.html  basemap-custom.html  basemap-gallery.html  basemap-places.html  basemap-static-tiles.html  basemap-worldview.html  basemaps-portal.html  blendmode-darkening.html  blendmode-grouplayer.html  blendmode-multiple-layers.html  bookmarks.html  building-scene-layer-building-filter.html  building-scene-layer-filter.html  building-scene-layer-slice.html  changing-version.html  cim-animations.html  cim-line-arrows.html  cim-lines-and-polygons.html  cim-marker-placement.html  cim-symbols.html  client-projection.html  completed_urls.txt  coordinate-conversion-custom.html  coordinate-conversion.html  (+378 more)
(+5 files in other folders)
