[project]
name = "arcgis-mcp-server"
version = "0.1.0"
description = "MCP server exposing ArcGIS API operations as tools (streamable HTTP)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "anyio>=4.5",
    "arcgis>=2.0",
    "click>=8.2",
    "mcp",
    "python-dotenv>=1.0",
    "starlette>=0.27",
    "uvicorn>=0.31",
]

[project.optional-dependencies]
dev = ["ruff>=0.6"]
redis = ["redis>=5.0"]

[project.scripts]
arcgis-mcp-server = "arcgis_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arcgis_mcp_server"]
